fix footer issue below 450px text was too small

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,6 +568,7 @@ hr {
         padding: 0;
         margin: 0 auto;
         text-align: center;
+        font-size: 200%;
     }
     #cover-text {
         width:100%;
